--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -94,7 +94,7 @@
   </div>
 
 
-
+<!-- 
 <div class="container mx-auto mt-5">
 <table *ngIf="isTable1Visible" class="table1">
   <thead>
@@ -165,4 +165,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
