--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,26 +5,22 @@
 	margin: 0;
 	padding: 0;	
 	font-family: Raleway, sans-serif;
-    
+	overflow: hidden;
 }
 
-body {
-	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
-}
+/*  */
 
-.container {
+.container1 {
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-    background-color: rgb(158, 39, 93);
-    margin-top: 10px;
+	justify-content: center;	
+    background-image: linear-gradient(-180deg, #5D54A4, #7C78B8);
 }
 
 .screen {		
 	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
 	position: relative;	
-	height: 600px;
+	height: 527.5px;
 	width: 360px;	
 	box-shadow: 0px 0px 24px #5C5696;
 }
@@ -83,7 +79,7 @@ body {
 	width: 200px;
 	background: #7E7BB9;	
 	top: 420px;
-	right: 50px;	
+	right: 50px;		
 	border-radius: 60px;
 }
 
