--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,25 @@
+<nav>
+  <ul>
+    <li>
+      <button (click)="showTable()" class="home-icon">
+        <div class="roof">
+          <div class="roof-edge"></div>
+        </div>
+        <div class="front"></div>
+      </button>
+    </li>
+   
+    <li>
+      <div class="about-icon" (click)="showTable1()">
+        <div class="head">
+          <div class="eyes"></div>
+          <div class="beard"></div>
+        </div>
+      </div>
+    </li>
 
+  </ul>
+</nav>
 <div class="container mx-auto mt-5">
     <table class="table1">
       <thead>
