--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -20,7 +20,7 @@
 
   </ul>
 </nav>
-<div class="container">
+<!-- <div class="container">
   <table *ngIf="isTableVisible" class="table table-trapped">
     <thead>
         <tr>
@@ -53,8 +53,8 @@
   
 
   
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!- Modal -->
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -92,7 +92,7 @@
       </div>
     </div>
   </div>
-
+ -->
 
 <!-- 
 <div class="container mx-auto mt-5">
