--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,12 +1,12 @@
 <nav>
   <ul>
     <li>
-      <button (click)="showTable()" class="home-icon">
+      <div class="home-icon" (click)="showTable()">
         <div class="roof">
           <div class="roof-edge"></div>
         </div>
         <div class="front"></div>
-      </button>
+      </div>
     </li>
    
     <li>
