--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,12 +1,12 @@
 <nav>
   <ul>
     <li>
-      <button (click)="showTable()" class="home-icon">
+      <div class="home-icon" (click)="showTable()">
         <div class="roof">
           <div class="roof-edge"></div>
         </div>
         <div class="front"></div>
-      </button>
+      </div>
     </li>
    
     <li>
@@ -68,7 +68,8 @@
                     <input formControlName="title" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     
                   </div>
-                  <div class="mb-3">
+                  <div class="mb
+                }-3">
                       <label for="exampleInputname1" class="form-label">Discreption</label>
                       <input formControlName="discription" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                       
