--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -14,11 +14,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;	
-    background-image: linear-gradient(-180deg, #5D54A4, #7C78B8);
+    background-image: linear-gradient(-180deg, rgb(61, 235, 191), rgb(210, 136, 227));
 }
 
 .screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	background: linear-gradient(90deg, #aa3cd9, #ce3cd5);		
 	position: relative;	
 	height: 527.5px;
 	width: 360px;	
@@ -59,7 +59,7 @@
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: #4ea8e1;	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -68,7 +68,7 @@
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg, #ec4c67, #ee4371);
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
@@ -77,7 +77,7 @@
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #7E7BB9;	
+	background: #1ccfcc;	
 	top: 420px;
 	right: 50px;		
 	border-radius: 60px;
@@ -97,7 +97,7 @@
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #7875B5;
+	color: #0cc4e4;
 }
 
 .login__input {
