--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -68,8 +68,7 @@
                     <input formControlName="title" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     
                   </div>
-                  <div class="mb
-                }-3">
+                  <div class="m-3">
                       <label for="exampleInputname1" class="form-label">Discreption</label>
                       <input formControlName="discription" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                       
