--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -59,7 +59,7 @@
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #4ea8e1;	
+	background:  #1ccfcc;
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
