--- a/src/app/usertable/usertable.component.html
+++ b/src/app/usertable/usertable.component.html
@@ -20,7 +20,7 @@
   
     </ul>
   </nav>
-  <div class="container">
+  <!-- <div class="container">
     <table class="table table-trapped">
       <thead>
           <tr>
@@ -49,7 +49,39 @@
           </tr>
       </tbody>
   </table>
-  </div>
+  </div> -->
+  <div class="container mt-5">
+    <table class="table1">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>name</th>
+          <th>username</th>
+          <th>password</th>
+          <th>status</th>
+        <th>
+          <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-left: 20px;">Add</button><br/>
+         </th>
+       
+        </tr>
+        
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of allusersData">
+          <td>{{data.id}}</td>
+          <td>{{data.name}}</td>
+          <td>{{data.username}}</td>
+          <td>{{data.password}}</td>
+          <td>{{data.status}}</td>
+         
+          <td>
+           <button class="btn btn-danger"(click)="deleteuser(data)"><i class="bi bi-trash"></i></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    
+    </div>
 
    
   
