--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 
-<button type="button" class="btn btn-info" style="float: right; margin-top: 20px; margin-right: 20px;" data-bs-toggle="modal" data-bs-target="#exampleModal">Add</button><br/>
+<button type="button" class="btn btn-info" style="float: right; margin-top: 20px; margin-right: 20px;" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="onAddBlogHandler()">Add</button><br/>
 <div class="container">
 
     
@@ -80,7 +80,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Add Blog</h5>
+          <h5 class="modal-title" id="exampleModalLabel"> Blog</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
