--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let display of blogs">
-        <td>{{display.Username}}</td>
+        <td>{{display.username}}</td>
         <td>{{display.title}}</td>
         <td>{{display.discription}}</td>
         <td><img src="{{display.url}}" style="height: 100px; width: 100px;"></td>
