--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -35,7 +35,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let display of blogs">
-        <td>{{display.Username}}</td>
+        <td>{{display.username}}</td>
         <td>{{display.title}}</td>
         <td>{{display.discription}}</td>
         <td><img src="{{display.url}}" style="height: 100px; width: 100px;"></td>
