--- a/src/app/usertable/usertable.component.html
+++ b/src/app/usertable/usertable.component.html
@@ -67,7 +67,7 @@
         
       </thead>
       <tbody>
-        <tr *ngFor="let user of allusersstatus">
+        <tr *ngFor="let user of allusersData">
           <td>{{user.id}}</td>
           <td>{{user.name}}</td>
           <td>{{user.username}}</td>
